--- a/templates/guide-to-literary-genres.html
+++ b/templates/guide-to-literary-genres.html
@@ -6,11 +6,11 @@
 {% block meta_description %}A comprehensive academic exploration of literary genres, from ancient epics to contemporary digital narratives{% endblock %}
 
 {% block content %}
-Navigation 
+<!-- Navigation -->
 
- Mobile Menu 
+<!-- Mobile Menu -->
 
- Hero Section 
+<!-- Hero Section -->
 <section class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-16 bg-black text-white overflow-hidden" style="
 				background-image: url('{% static 'assets/image/hero/herobackground.png' %}');
 				background-size: cover;
@@ -58,7 +58,7 @@ Navigation
 </div>
 </div>
 </section>
- Introduction Section 
+<!-- Introduction Section -->
 <section class="py-16 md:py-24 bg-white" id="intro-section">
 <div class="max-w-7xl mx-auto px-4 sm:px-6">
 <div class="max-w-4xl mx-auto">
@@ -463,7 +463,7 @@ Navigation
 </div>
 </div>
 </section>
- Footer Section 
+  
 
 <script>
 			// Mobile menu toggle
