--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -318,12 +318,12 @@
 					<a
 						href="/privacy-policy"
 						class="text-[14px] text-[#7B8189] hover:text-black"
-						>Privacy</a
+						>Privacy Policy</a
 					>
 					<a
 						href="/terms-and-conditions"
 						class="text-[14px] text-[#7B8189] hover:text-black"
-						>Terms &
+						>Terms & Conditions
 					</a>
 				</div>
 			</div>
