--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -6,11 +6,11 @@
 {% block meta_description %}Privacy Policy for Penwise. Learn how we collect, use, and protect your personal information.{% endblock %}
 
 {% block content %}
-Navigation 
+<!-- Navigation -->
 
- Mobile Menu 
+<!-- Mobile Menu -->
 
- Main Content 
+<!-- Main Content -->
 <main class="lg:mt-[100px] mt-[90px] pb-24">
 <div class="max-w-4xl mx-auto px-5">
 <!-- Header -->
@@ -222,5 +222,5 @@ Navigation
 </div>
 </div>
 </main>
- Footer Section
+ 
 {% endblock %}
