--- a/templates/quality-and-professional.html
+++ b/templates/quality-and-professional.html
@@ -6,11 +6,11 @@
 {% block meta_description %}Discover how Penwise delivers professional-grade storytelling with advanced AI technology that rivals human authors{% endblock %}
 
 {% block content %}
-Navigation 
+<!-- Navigation -->
 
- Mobile Menu 
+<!-- Mobile Menu -->
 
- Hero Section 
+<!-- Hero Section -->
 <section class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-16 bg-black text-white overflow-hidden" style="
 				background-image: url('{% static 'assets/image/hero/herobackground.png' %}');
 				background-size: cover;
@@ -130,7 +130,7 @@ Navigation
 </div>
 </div>
 </section>
- Trusted Co-Author Section 
+<!-- Trusted Co-Author Section -->
 <section class="py-16 md:py-24 bg-gray-50">
 <div class="max-w-7xl mx-auto px-4 sm:px-6">
 <div class="grid lg:grid-cols-2 gap-12 items-center">
@@ -313,7 +313,7 @@ Navigation
 </div>
 </div>
 </section>
- Footer Section 
+  
 
 <script>
 			// Mobile Menu
