--- a/templates/speed-and-efficiency.html
+++ b/templates/speed-and-efficiency.html
@@ -6,11 +6,11 @@
 {% block meta_description %}Lightning-Fast Book Creation That Doesn't Compromise on Quality. Transform Your Writing Timeline Forever.{% endblock %}
 
 {% block content %}
-Navigation 
+<!-- Navigation -->
 
- Mobile Menu 
+<!-- Mobile Menu -->
 
- Hero Section 
+<!-- Hero Section -->
 <section class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-16 bg-black text-white overflow-hidden" style="
 				background-image: url('{% static 'assets/image/hero/herobackground.png' %}');
 				background-size: cover;
@@ -340,7 +340,7 @@ Navigation
 				</button>
 </div>
 </section>
- Footer Section 
+  
 
 <script>
 			// Mobile Menu
