--- a/templates/terms-and-conditions.html
+++ b/templates/terms-and-conditions.html
@@ -6,11 +6,11 @@
 {% block meta_description %}Terms and Conditions for using Penwise, an Penwise-powered book generation platform.{% endblock %}
 
 {% block content %}
-Navigation 
+<!-- Navigation -->
 
- Mobile Menu 
+<!-- Mobile Menu -->
 
- Main Content 
+<!-- Main Content -->
 <main class="lg:mt-[100px] mt-[90px] pb-24">
 <div class="max-w-4xl mx-auto px-5">
 <!-- Header -->
@@ -242,7 +242,7 @@ Navigation
 </div>
 </div>
 </main>
- Footer Section 
+  
 
 <script>
 			// Mobile Menu
