--- a/templates/publishing-copyright.html
+++ b/templates/publishing-copyright.html
@@ -6,11 +6,11 @@
 {% block meta_description %}Your creativity belongs to you. Discover how Penwise.ai protects your copyright and provides complete publishing freedom.{% endblock %}
 
 {% block content %}
-Navigation 
+<!-- Navigation -->
 
- Mobile Menu 
+<!-- Mobile Menu -->
 
- Hero Section 
+<!-- Hero Section -->
 <section class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-16 bg-black text-white overflow-hidden" style="
 				background-image: url('{% static 'assets/image/hero/herobackground.png' %}');
 				background-size: cover;
@@ -385,7 +385,7 @@ Navigation
 </div>
 </div>
 </section>
- Footer Section 
+  
 
 <script>
 			// Mobile Menu
