--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -91,7 +91,7 @@
 						>
 					</li>
 					<li>
-						<a href="/why" class="hover:text-black transition-colors"
+						<a href="/why-penwise" class="hover:text-black transition-colors"
 							>Why Penwise</a
 						>
 					</li>
