--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -31,7 +31,7 @@
 					></span>
 				</a>
 				<a
-					href="/why"
+					href="/why-penwise"
 					class="relative font-medium text-gray-600 hover:text-gray-900 transition-colors duration-300 group"
 				>
 					Why Penwise
