--- a/templates/index.html
+++ b/templates/index.html
@@ -462,7 +462,7 @@
 
 	<!-- From Idea to Published Novel in 3 easy steps Section -->
 	<section
-		class="bg-[url('{% static '/assets/image/step/hero.png' %}')] bg-cover bg-center relative py-16 md:py-24 bg-black overflow-hidden">
+		class="bg-[url('{% static 'assets/image/step/hero.png' %}')] bg-cover bg-center relative py-16 md:py-24 bg-black overflow-hidden">
 		<!-- Starry Background Pattern -->
 
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 relative z-10">
