--- a/templates/ambassadors-program.html
+++ b/templates/ambassadors-program.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Penwise Ambassadors
-Program - Turn Influence into Income{% endblock %} {% block meta_description
-%}Join the Penwise Ambassadors Program. Earn premium rewards for helping the
-world write their first book.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Penwise Ambassadors Program - Turn Influence into Income{% endblock %}
+
+{% block meta_description %}Join the Penwise Ambassadors Program. Earn premium rewards for helping the world write their first book.{% endblock %}
+
+{% block content %}
 <!-- Navigation -->
 
 <!-- Mobile Menu -->
