--- a/templates/book-title-generator.html
+++ b/templates/book-title-generator.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}AI Book & Novel
-Title Generator | Penwise{% endblock %} {% block meta_description %}Instantly
-create catchy, unique, and marketable book titles with our free AI Book & Novel
-Title Generator. Perfect for all genres.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}AI Book & Novel Title Generator | Penwise{% endblock %}
+
+{% block meta_description %}Instantly create catchy, unique, and marketable book titles with our free AI Book & Novel Title Generator. Perfect for all genres.{% endblock %}
+
+{% block content %}
 <!-- Navigation -->
 
 <!-- Mobile Menu -->
