--- a/templates/editing-and-proofreading-tips.html
+++ b/templates/editing-and-proofreading-tips.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Complete Guide to
-Professional Editing & Proofreading | Penwise{% endblock %} {% block
-meta_description %}Master the art and science of transforming rough drafts into
-polished, publication-ready manuscripts{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Complete Guide to Professional Editing & Proofreading | Penwise{% endblock %}
+
+{% block meta_description %}Master the art and science of transforming rough drafts into polished, publication-ready manuscripts{% endblock %}
+
+{% block content %}
 
 <!-- Hero Section -->
 <section
