--- a/templates/educators-and-schools.html
+++ b/templates/educators-and-schools.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}For Educators &
-Schools - Penwise{% endblock %} {% block meta_description %}Empower creativity
-in the classroom with Penwise. Transform lessons into unforgettable storytelling
-experiences.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}For Educators & Schools - Penwise{% endblock %}
+
+{% block meta_description %}Empower creativity in the classroom with Penwise. Transform lessons into unforgettable storytelling experiences.{% endblock %}
+
+{% block content %}
 
 <!-- Hero Section -->
 <section
