--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Penwise -
-Frequently Asked Questions{% endblock %} {% block meta_description %}Find
-answers to common questions about Penwise and how it can help you write
-better.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Penwise - Frequently Asked Questions{% endblock %}
+
+{% block meta_description %}Find answers to common questions about Penwise and how it can help you write better.{% endblock %}
+
+{% block content %}
 
 <!-- Hero Section -->
 <section
