--- a/templates/for-parents.html
+++ b/templates/for-parents.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}For Parents - Make
-Your Child the Hero | Penwise{% endblock %} {% block meta_description %}Create
-personalized stories where your child is the hero. Build confidence and a love
-for reading with Penwise.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}For Parents - Make Your Child the Hero | Penwise{% endblock %}
+
+{% block meta_description %}Create personalized stories where your child is the hero. Build confidence and a love for reading with Penwise.{% endblock %}
+
+{% block content %}
 <!-- Navigation -->
 
 <!-- Mobile Menu -->
