--- a/templates/future-oriented.html
+++ b/templates/future-oriented.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Future Oriented |
-Penwise{% endblock %} {% block meta_description %}Step into the future of
-storytelling with Penwise. Combine human creativity with cutting-edge AI
-technology.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Future Oriented | Penwise{% endblock %}
+
+{% block meta_description %}Step into the future of storytelling with Penwise. Combine human creativity with cutting-edge AI technology.{% endblock %}
+
+{% block content %}
 
 <!-- Hero Section -->
 <section
