--- a/templates/literary-devices.html
+++ b/templates/literary-devices.html
@@ -1,8 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Literary Devices: A
-Complete Masterclass | Penwise{% endblock %} {% block meta_description %}From
-foundational concepts to advanced literary analysis - your comprehensive guide
-to understanding and mastering the art of literary expression{% endblock %} {%
-block content %} 
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Literary Devices: A Complete Masterclass | Penwise{% endblock %}
+
+{% block meta_description %}From foundational concepts to advanced literary analysis - your comprehensive guide to understanding and mastering the art of literary expression{% endblock %}
+
+{% block content %} 
 <!-- Hero Section -->
 <section
   class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-10 bg-black text-white overflow-hidden"
