--- a/templates/use-case.html
+++ b/templates/use-case.html
@@ -11,7 +11,7 @@ from first-time authors to experienced storytellers across all genres{% endblock
 <section
   class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-16 bg-black text-white overflow-hidden"
   style="
-    background-image: url('{% static \'assets/image/hero/herobackground.png\' %}');
+    background-image: url(&quot;{% static 'assets/image/hero/herobackground.png' %}&quot;);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
