--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Penwise - Write
-Smarter, Faster, and Better{% endblock %} {% block meta_description
-%}Penwise-powered writing assistant that helps you write better content
-faster.{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Penwise - Write Smarter, Faster, and Better{% endblock %}
+
+{% block meta_description %}Penwise-powered writing assistant that helps you write better content faster.{% endblock %}
+
+{% block content %}
 <!-- Navigation -->
 
 <!-- Mobile Menu -->
