--- a/templates/our-mission-and-vision.html
+++ b/templates/our-mission-and-vision.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Our Mission &
-Vision | Penwise{% endblock %} {% block meta_description %}Every voice deserves
-a story. Every story deserves a book. Discover Penwise's mission to democratize
-storytelling.{% endblock %} {% block content %} 
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Our Mission & Vision | Penwise{% endblock %}
+
+{% block meta_description %}Every voice deserves a story. Every story deserves a book. Discover Penwise's mission to democratize storytelling.{% endblock %}
+
+{% block content %} 
 <!-- Hero Section -->
 <section
   class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-10 bg-black text-white overflow-hidden"
