--- a/templates/platforms-and-comparisons.html
+++ b/templates/platforms-and-comparisons.html
@@ -6,7 +6,7 @@ ChatGPT, Jasper, Notion AI, and more.{% endblock %} {% block content %}
 <section
   class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-10 bg-black text-white overflow-hidden"
   style="
-    background-image: url('{% static \'assets/image/hero/herobackground.png\' %}');
+    background-image: url(&quot;{% static 'assets/image/hero/herobackground.png' %}&quot;);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -571,7 +571,7 @@ ChatGPT, Jasper, Notion AI, and more.{% endblock %} {% block content %}
 <!-- CTA Section  -->
 <section
   class="mt-[80px] max-w-7xl mx-auto px-4 sm:px-6 rounded-t-2xl relative py-16 md:py-20 lg:py-24 w-full h-full bg-cover bg-center bg-no-repeat overflow-hidden"
-  style="background-image: url('{% static \'assets/image/footer/bg.png\' %}')"
+  style="background-image: url(&quot;{% static 'assets/image/footer/bg.png' %}&quot;)"
 >
   <!-- Dark Overlay -->
   <div class="absolute inset-0 bg-black bg-opacity-60"></div>
