--- a/templates/plot-generator.html
+++ b/templates/plot-generator.html
@@ -7,7 +7,7 @@ Plot Generator. Get conflicts, resolutions, and twists for any genre.{% endblock
 <section
   class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-10 bg-black text-white overflow-hidden"
   style="
-    background-image: url('{% static \'assets/image/hero/herobackground.png\' %}');
+    background-image: url(&quot;{% static 'assets/image/hero/herobackground.png' %}&quot;);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -479,7 +479,7 @@ Plot Generator. Get conflicts, resolutions, and twists for any genre.{% endblock
 <!-- CTA Section  -->
 <section
   class="mt-[80px] max-w-7xl mx-auto px-4 sm:px-6 rounded-t-2xl relative py-16 md:py-20 lg:py-24 w-full h-full bg-cover bg-center bg-no-repeat overflow-hidden"
-  style="background-image: url('{% static \'assets/image/footer/bg.png\' %}')"
+  style="background-image: url(&quot;{% static 'assets/image/footer/bg.png' %}&quot;)"
 >
   <div class="absolute inset-0 bg-black bg-opacity-60"></div>
   <div
