--- a/templates/includes/mobile_menu.html
+++ b/templates/includes/mobile_menu.html
@@ -1,8 +1,14 @@
 {% load static %}
 <!-- Mobile Menu -->
+<!-- Mobile Menu Overlay -->
+<div
+	id="mobileMenuOverlay"
+	class="fixed inset-0 bg-black/50 z-[55] hidden opacity-0 transition-opacity duration-300 lg:hidden"
+></div>
+
 <div
 	id="mobileMenu"
-	class="fixed top-0 right-0 h-full w-full max-w-sm bg-white z-50 shadow-2xl transform translate-x-full transition-transform duration-300 lg:hidden"
+	class="fixed top-0 right-0 h-full w-full max-w-sm bg-white z-[60] shadow-2xl transform translate-x-full transition-transform duration-300 lg:hidden"
 >
 	<div class="flex flex-col h-full">
 		<div class="flex items-center justify-between p-6 border-b border-gray-200">
