fix: syntax error

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Penwise -
-Newsletter{% endblock %} {% block meta_description %}Subscribe to the Penwise
-newsletter for writing tips, updates, and exclusive content.{% endblock %} {%
-block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Penwise - Newsletter{% endblock %}
+
+{% block meta_description %}Subscribe to the Penwise newsletter for writing tips, updates, and exclusive content.{% endblock %}
+
+{% block content %}
 
 <!-- Hero Section -->
 <section
