fat: comments issues

--- a/templates/quality-and-professional.html
+++ b/templates/quality-and-professional.html
@@ -1,16 +1,18 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Writing Quality &
-Professional Use | Penwise{% endblock %} {% block meta_description %}Discover
-how Penwise delivers professional-grade storytelling with advanced AI technology
-that rivals human authors{% endblock %} {% block content %}
-<!-- Navigation -->
+{% extends 'base.html' %}
+{% load static %}
 
-<!-- Mobile Menu -->
+{% block title %}Writing Quality & Professional Use | Penwise{% endblock %}
+
+{% block meta_description %}Lightning-Fast Book Creation That Doesn't Compromise on Quality. Transform Your Writing Timeline Forever.{% endblock %}
+
+{% block content %}
+
 
 <!-- Hero Section -->
 <section
   class="lg:mx-[60px] mx-5 lg:mt-[100px] mt-[90px] rounded-3xl relative lg:p-28 p-5 py-16 bg-black text-white overflow-hidden"
   style="
-    background-image: url('{% static 'assets/image/hero/herobackground.png' %}');
+    background-image: url(&quot;{% static 'assets/image/hero/herobackground.png' %}&quot;);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
